# garage

./: .gitignore
ai/hyper-mcp-test/: README.org  config.json
ai/lm-studio-local-server-demo/: README.org  main.py  pyproject.toml
ai/mlx-vlm-server/: README.org  pyproject.toml
ai/rest-api-document-golang/: README.org
crypto/smart-contract-solana-demo/: README.org  id-translate.py
emacs/: code-it-later-mode.el  fidl-ts-mode.el
flipper/hello_world/: README.md  application.fam  hello_world.c
flipper/hello_world_rs/: .gitignore  README.md
gopher/: .gitignore
gopher/api-db-mvp/: README.md  dbconfig.json  go.mod  main.go  main_test.go
gopher/assert-value-inside-struct/: go.mod  main.go
gopher/call_share_lib/: go.mod  main.go  main_test.go
gopher/call_share_lib/json-parser/: Cargo.toml
gopher/call_share_lib/json-parser/src/: json_parser.h  lib.rs
gopher/concurrency-http-client-call/: go.mod  main.go
gopher/dlv-demo/: README.md  go.mod  launch.json  main.go  main_test.go
gopher/err-var-defer-mixed/: go.mod  main.go
gopher/errors-unwrap-as-is-test/: go.mod  main.go
gopher/fast-server-test/: go.mod
gopher/function-interface-type-return/: go.mod  main.go
gopher/generics-interface-demo/: README.org  go.mod  main.go
gopher/generics-playground/: generics-type.go  go.mod
gopher/go-for-range-22/: go.mod
gopher/go-inteeface-reload/: go.mod  main.go
gopher/go-n-gdb/: README.md  go.mod  main.go
gopher/golang-result-chain/: go.mod  main.go
gopher/golang-ticker-drifting-demo/: go.mod  main.go
gopher/handlerFuncTypeAssertion/: main.go
gopher/http2-test/: README.md  lib.go  main.go
gopher/io-copy-benchmark-test/: README.org  go.mod  main.go  main_test.go
gopher/json-pkg-v2-demo/: go.mod  (+1 more)
lisp/: Fibonacci.lisp  auto-generate-cadr.lisp  binary-linear-equation-calculator.lisp  check-if-contribute-today.lisp  check-if-contribute-today.ros  contents-makeer.lisp  dynamic-test.lisp  format-examples.lisp  function-namescope-test.lisp  get-my-contribute.lisp  lao-bei-jing-er.lisp  lru-cache.lisp  macro-in-macro.lisp  random-csv-generater.lisp  random-string.lisp  random-string.ros  setf-test.lisp  tele-bot-server.lisp  tiny-http-server.lisp
omg-org/: structure-template-showcases.org  test-the-org-mindmap.org
python/gemma-3-demo/: README.md  README.org  main.py  pyproject.toml
rusty/Sentry/: Cargo.toml  README.md
rusty/Sentry/src/: app.rs  event.rs  lib.rs  main.rs
rusty/Sentry/src/app/: resume.rs
rusty/Sentry/src/events_demo/: mod.rs  new_tweet.rs
rusty/accountant/: .gitignore  Cargo.toml  README.org  accountant-config.lisprpc  accountant.lisprpc  accountant.toml
rusty/accountant/src/: fs.rs  lib.rs  main.rs
rusty/accountant/tests/: entry_test.rs
rusty/actix-rustls-test/: Cargo.toml
rusty/actix-rustls-test/src/: main.rs
rusty/async-openai-demo/: Cargo.toml
rusty/async-openai-demo/src/: main.rs
rusty/async-read-file/: Cargo.toml
rusty/async-read-file/src/: main.rs
rusty/benchmark-demo/: Cargo.toml  README.md
rusty/benchmark-demo/benches/: bench-fault.rs  bench0.rs  perf.rs
rusty/benchmark-demo/src/: main.rs
rusty/diesel_demo/: Cargo.toml  README.md
rusty/diesel_demo/migrations/2022-04-24-023027_create_posts/: up.sql
rusty/diesel_demo/src/: lib.rs  models.rs  schema.rs
rusty/generate-telegram-api/: Cargo.toml  README.md
rusty/generate-telegram-api/src/: README.md  datatypes.rs  lib.rs  main.rs
rusty/leetcode-picker/: Cargo.toml  README.md
rusty/leetcode-picker/src/: cli_args.rs  content_parser.rs  html_to_markdown.rs  lib.rs  main.rs  quiz.rs  regex_handle.rs  request.rs  to_markdown.rs
rusty/leetcode-picker/tests/: questions_description_test_case0  questions_description_test_case0.md  questions_description_test_case1.md  workflow_test.rs
rusty/lisp-rpc-rust-generator-demo/: Cargo.toml  README.org  spec.lisp
rusty/lisp-rpc-rust-generator-demo/src/: lib.rs  main.rs  rpc_libs.rs  rpc_server.rs
rusty/mTCP-demo/: Cargo.toml  README.md
rusty/mTCP-demo/ca/: gen.sh
rusty/postgresql-binding/: .gitignore  Cargo.toml  init.sh
rusty/postgresql-binding/src/: main.rs
rusty/qdrant-embedding-test/qdrant-test/: Cargo.toml
rusty/qdrant-embedding-test/qdrant-test/src/: embedding_demo.rs  main.rs  start_up.rs
rusty/ratzilla-demo/snake-game/: Cargo.toml
rusty/ratzilla-demo/snake-game/src/: main.rs  snake.rs
rusty/sqlx-acquire-tokio-block-demo/: Cargo.toml  README.md  docker-compose.yml  init.sql
rusty/sqlx-acquire-tokio-block-demo/src/: main.rs
rusty/telegram-bot-server/: Cargo.toml  README.md
rusty/telegram-bot-server-v2/: .gitignore  Cargo.toml  README.md  TODO.md
rusty/telegram-bot-server-v2/entity/: Cargo.toml
rusty/telegram-bot-server-v2/entity/src/: chat_records.rs  gpt_group_whitelist.rs  gpt_white_list.rs  lib.rs  mod.rs  prelude.rs  reminder.rs
rusty/telegram-bot-server-v2/migration/: Cargo.toml
rusty/telegram-bot-server-v2/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230625_181541_gpt_groups_whitelist.rs  m20230704_014130_reminder_table.rs  m20230818_010422_chat_records.rs  m20230818_194230_add_chat_records_timestamp.rs
rusty/telegram-bot-server-v2/src/: app.rs  deliver.rs  lib.rs  main.rs  opts.rs  util.rs
rusty/telegram-bot-server-v2/src/app/: chatGPT.rs  echo.rs  github_commit_check.rs  github_commit_check_active.rs  reminder.rs  status_keeper.rs
rusty/telegram-bot-server/src/: app.rs  deliver.rs  lib.rs  main.rs  reminder.rs  watcher.rs
rusty/telegram-bot-server/src/app/: github_api.rs  reminder.rs
rusty/telegram-bot-server/tests/: reminder_test.rs
rusty/urban-tribble/: Cargo.toml  README.md
rusty/urban-tribble/src/: lib.rs  main.rs
web/: .gitignore
web/blog0/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.org  input.css  tailwind.config.js
web/blog0/assets/: tailwind.css
web/blog0/posts/: test0.md  test1.md
web/blog0/src/: blog_content.rs  home.rs  main.rs  router.rs
web/gprc-service-lab/service-rust/: Cargo.toml  build.rs
web/gprc-service-lab/service-rust/OUTPUT/: hello.rs
web/gprc-service-lab/service-rust/src/: main.rs
(+607 files in other folders)
