[package]
name = "Sentry"
version = "0.1.0"
authors = ["ccQpein"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
lazy_static = "1"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }