[package]
name = "actix-rustls-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.20", features = ["rustls"] }
rustls = "0.20"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }