[package]
name = "async-openai-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
