[package]
name = "benchmark-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cl-format = { version = "0.1", path = "../../../cl-format-rs/cl-format" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pprof = { version = "0.11.1", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench0"
harness = false

[[bench]]
name = "bench-fault"
harness = false
