[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
#diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
uuid = {version = "1.0.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
