[package]
name = "generate-telegram-api"
version = "0.1.0"
authors = ["ccQpein"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
curl = "0.4.34"
selectors = "0.22.0"
cssparser = "0.27.2"
regex = "1"