[package]
name = "leetcode-picker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11",features = ["blocking", "json", "cookies"]}
scraper = "0.12.0"
ego-tree = "^0.6"
regex = "1"
lazy_static = "1"