[package]
name = "lisp-rpc-rust-generator-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1"
#lisp-rpc-rust-generator-macro = { git = "https://github.com/ccQpein/lisp-rpc" }
lisp-rpc-rust-serializer = { git = "https://github.com/ccQpein/lisp-rpc" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
