[package]
name = "mTCP-demo"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20"
webpki-roots = "0.22"
rustls-pemfile = "0.2"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
mio = { version = "0.8", features = ["net", "os-poll"] }