[package]
name = "postgresql-binding"
version = "0.1.0"
authors = ["ccQpein"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
#actix-web = "3"
deadpool-postgres = "0.7"
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8"]}
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-service = "1"
chrono = {version = "0.4", features=["serde"]}
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }