[package]
name = "sqlx-acquire-tokio-block-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "1", features = [
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
  "sqlx-postgres",
  "sqlx-sqlite",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.5.0"
