[package]
name = "telegram-bot-server-v2"
version = "0.1.0"
authors = ["ccQpein"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
actix-web = { version = "4", features = ["rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
octocrab = "0.15"
chrono = "0.4.19"
chrono-tz = "0.4"
clap = { version = "3", features = ["derive"] }
rustls = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-trait = "0.1"
rustls-pemfile = "0.2"
# I dont know why I have to put this here too
openssl = { version = "0.10.32", features = ["vendored"] }
async-openai = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }

# depdencies local
entity = { version = "0.1", path = "./entity" }
