[package]
name = "telegram-bot-server"
version = "0.1.0"
authors = ["ccQpein"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.19"
async-std = "1.9.0"
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4.0.0-beta.6", features = ["rustls"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tracing = "0.1"
tracing-subscriber = "0.2"
#octocrab = { version = "0.8", features = ["rustls"] }
octocrab = "0.12"
chrono = "0.4.19"
chrono-tz = "0.4"
clap = "3.0.0-beta.2"
lazy_static = "1"

# re-write axum need these
axum = "0.2"
#axum-server = { version = "^0.2", features = ["tls-rustls"] }
tower-http = {version = "0.1", features = ["full"]}
tower = {version = "0.4", features = ["full"]}
tokio-rustls = "0.22.0"
hyper = { version = "0.14", features = ["full"] }

# I dont know why I have to put this here
openssl = { version = "0.10.32", features = ["vendored"] }

[[bin]]
name = "telegram-bot-server-actix"
path = "src/bin/main_actix.rs"

# [[bin]]
# name = "telegram-bot-server-axum"
# path = "src/bin/main_axum.rs"