[package]
name = "urban-tribble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.19"
