[package]
name = "blog0"
version = "0.1.0"
authors = ["ccQpein <ccqpein@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
tracing = "0.1.41"
chrono = { version = "0" }
tokio = { version = "1", features = ["full"], optional = true }
async-std = "1.13.1"
serde = "1.0.219"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
