[package]
name = "json-parser"
version = "0.1.0"
authors = ["ccQpein"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#name = "json_parser"
crate-type = ["cdylib","staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
