[package]
name = "qdrant-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
qdrant-client = "1.1.1"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tonic = "0.9.2"
