[package]
name = "qdrant-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
qdrant-client = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
