[package]
name = "snake-game"
version = "0.1.0"
edition = "2024"

# [features]
# stdweb = ["instant/stdweb"]
# wasm-bindgen = ["instant/wasm-bindgen"]

[dependencies]
rand = "0"
ratzilla = "0.2.0"
getrandom = { version = "0", features = ["wasm_js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  'console', # Add this feature for console logging
] }
#instant = "0"
web-time = "0"
