[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
strum = { version = "0.25", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "^0.11"
features = ["sqlx-sqlite", "runtime-tokio-rustls"]
