[package]
name = "service-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.7", features = ["transport"] }
prost = "0.8"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tonic-web = "0.1"

[build-dependencies]
tonic-build = "0.5"