[package]
name = "service-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.7", features = ["transport", "tls"] }
prost = "0.10"
tonic-web = "0.3"

[build-dependencies]
tonic-build = "0.7"